discussion/kv_engine/179415/179415_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove flushAndRemoveCheckpoint calls for populateVbsUntil callers

Since populateVbsUntil now flushes and expels during population,
we no longer require explicit flushAndRemoveCheckpoints calls or
'topping up' again to the high watermark after them. Remove them.

Change-Id: Ie8b848077d5d3aab78402644a35985fba74d1b1b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-09-05 08:39:22.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-05 08:59:55.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20017/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cb3_taskqueue.cc:55:10: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
    std::cout << "Num sleepers: " + std::to_string(numToWake) << std::endl;
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/fake_executorpool.h:148:18: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
            std::cout << "Prefuturequeuesize: " +
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/fake_executorpool.h:151:18: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
            std::cout << "postfuturequeuesize: " +
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/fake_executorpool.h:154:18: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
            std::cout << "prereadyqueuesize: " +
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/fake_executorpool.h:157:18: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
            std::cout << "readyqueuesize: " +
                 ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20017/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cb3_taskqueue.cc:55:10:
error: no member named "cout" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20017/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48972/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
Num sleepers: 1
Num sleepers: 0
Prefuturequeuesize: 1
postfuturequeuesize: 1
prereadyqueuesize: 0
readyqueuesize: 0
Future queue size: 1, Ready queue size:0
Num sleepers: 0
Prefuturequeuesize: 1
postfuturequeuesize: 1
prereadyqueuesize: 0
readyqueuesize: 0
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1271): error: Expected: runNextTask(lpNonioQ, "Paging out items.") doesn"t throw an exception.
  Actual: it throws class std::logic_error with description "CheckedExecutor failed fetchNextTask".
Num sleepers: 1
Num sleepers: 0
Num sleepers: 0
Num sleepers: 0
Num sleepers: 0
Num sleepers: 0
[  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (6743 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48972/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41166/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/fake_executorpool.h:148:18:
error: no member named "cout" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41166/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9718/ : FAILURE

Compile error at [2022-09-05T08:40:37.037Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/cb3_taskqueue.cc:55:10:
error: no member named "cout" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9718/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21304/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
[2022-09-05T08:53:59.000Z] Num sleepers: 1
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Prefuturequeuesize: 1
[2022-09-05T08:53:59.000Z] postfuturequeuesize: 1
[2022-09-05T08:53:59.000Z] prereadyqueuesize: 0
[2022-09-05T08:53:59.000Z] readyqueuesize: 0
[2022-09-05T08:53:59.000Z] Future queue size: 1, Ready queue size:0
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Prefuturequeuesize: 1
[2022-09-05T08:53:59.000Z] postfuturequeuesize: 1
[2022-09-05T08:53:59.000Z] prereadyqueuesize: 0
[2022-09-05T08:53:59.000Z] readyqueuesize: 0
[2022-09-05T08:53:59.000Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1271: Failure
[2022-09-05T08:53:59.000Z] Expected: runNextTask(lpNonioQ, "Paging out items.") doesn"t throw an exception.
[2022-09-05T08:53:59.000Z]   Actual: it throws std::logic_error with description "CheckedExecutor failed fetchNextTask".
[2022-09-05T08:53:59.000Z] Num sleepers: 1
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] Num sleepers: 0
[2022-09-05T08:53:59.000Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (2766 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21304/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9817/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
[2022-09-05T08:50:08.388Z] Num sleepers: 1
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Prefuturequeuesize: 1
[2022-09-05T08:50:08.388Z] postfuturequeuesize: 1
[2022-09-05T08:50:08.388Z] prereadyqueuesize: 0
[2022-09-05T08:50:08.388Z] readyqueuesize: 0
[2022-09-05T08:50:08.388Z] Future queue size: 1, Ready queue size:0
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Prefuturequeuesize: 1
[2022-09-05T08:50:08.388Z] postfuturequeuesize: 1
[2022-09-05T08:50:08.388Z] prereadyqueuesize: 0
[2022-09-05T08:50:08.388Z] readyqueuesize: 0
[2022-09-05T08:50:08.388Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1271: Failure
[2022-09-05T08:50:08.388Z] Expected: runNextTask(lpNonioQ, "Paging out items.") doesn"t throw an exception.
[2022-09-05T08:50:08.388Z]   Actual: it throws std::logic_error with description "CheckedExecutor failed fetchNextTask".
[2022-09-05T08:50:08.388Z] Num sleepers: 1
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] Num sleepers: 0
[2022-09-05T08:50:08.388Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=value_only" (1208 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_couchstore_value_only
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9817/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19238/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21981/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22339/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23075/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30370/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
